# pyMarAI

./: .gitignore  MODEL_LICENSE.md  README.md  config.py  gui.py  login.py  marai.py  predict.py  pymarai.desktop  pymarai.yml  pyproject.toml  setup.py
pymarai/: __init__.py  config.py  gui.py  login.py  marai.py  predict.py  remarai.py  retrain.py
resources/: pymarai.desktop
